CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.18

	- SECURITY FIX: Potential underflow/overflow bug in web
	  interface.
	- SECURITY FIX: Race condition in certificate creation.
	- SECURITY FIX: Bad URIs in browse packets could be used
	  to exploint the web interface underflow/overflow bug.
	- SECURITY FIX: Some types of Denial of Service attacks
	  were not handled properly, so once the attack was over
	  the scheduler did not close the connections
	  immediately on all platforms.
	- SECURITY FIXES: Added integer overflow/underflow
	  checks for all image formats.
	- The pstops filter didn't reset the showpage operator
	  back to its original at the end of a job; this
	  prevented the concatenation of documents (used
	  primarily for CUPS 1.2...)
	- The cupsGetPPD() function didn't always set the
	  cupsLastError() value when an error occurred.
	- The IPP media, output-bin, and sides attributes took
	  precedence over the corresponding PPD options, which
	  caused inconsistent behavior under MacOS X with some
	  PPD files.
	- The cupsaddsmb utility specified the wrong number of
	  arguments to the adddriver command when adding the
	  Win9x PostScript drivers.
	- The web interface did not always report the correct
	  error message.
	- The scheduler did not clear the POSIX signal action
	  structure when waiting for the child to send it a
	  SIGUSR1 signal; this could cause the signal handler
	  not to be called properly, preventing the parent
	  process from returning.


CHANGES IN CUPS V1.1.17

	- The "manual_copies" option did not work when the LPD
	  backend had to retry a print job.
	- The image filters did not convert GIF images properly.
	- The RunAsUser option was incompatible with the new
	  daemon-mode code in 1.1.16.
	- Fixed a problem with the Set-Job-Attributes and
	  PostScript job ticket code in the scheduler - the
	  "last" attribute pointer was never updated, which
	  could cause the scheduler to crash when applying job
	  ticket data.