@@ -1,5 +1,5 @@
 #
-# "$Id: cupsd.conf.in,v 1.2.2.6 2002/08/22 17:14:35 mike Exp $"
+# "$Id: cupsd.conf.in,v 1.2.2.7 2002/12/13 16:33:17 mike Exp $"
 #
 #   Sample configuration file for the Common UNIX Printing System (CUPS)
 #   scheduler.
@@ -385,6 +385,15 @@ Port 631
 #MaxClients 100
 
 #
+# MaxClientsPerHost: controls the maximum number of simultaneous clients that
+# will be handled from a specific host.  Defaults to 10 or 1/10th of the
+# MaxClients setting, whichever is larger.  A value of 0 specifies the
+# automatic (10 or 1/10th) setting.
+#
+
+#MaxClientsPerHost 0
+
+#
 # MaxRequestSize: controls the maximum size of HTTP requests and print files.
 # Set to 0 to disable this feature (defaults to 0.)
 #
@@ -761,5 +770,5 @@ Allow From 127.0.0.1
 </Location>
 
 #
-# End of "$Id: cupsd.conf.in,v 1.2.2.6 2002/08/22 17:14:35 mike Exp $".
+# End of "$Id: cupsd.conf.in,v 1.2.2.7 2002/12/13 16:33:17 mike Exp $".
 #
