@@ -1,5 +1,5 @@
 /*
- * "$Id: conf.c,v 1.77.2.15 2002/08/22 17:07:53 mike Exp $"
+ * "$Id: conf.c,v 1.77.2.16 2002/12/13 16:33:19 mike Exp $"
  *
  *   Configuration routines for the Common UNIX Printing System (CUPS).
  *
@@ -105,6 +105,7 @@ static var_t	variables[] =
   { "LogFilePerm",	&LogFilePerm,		VAR_INTEGER,	0 },
   { "MaxActiveJobs",	&MaxActiveJobs,		VAR_INTEGER,	0 },
   { "MaxClients",	&MaxClients,		VAR_INTEGER,	0 },
+  { "MaxClientsPerHost",&MaxClientsPerHost,	VAR_INTEGER,	0 },
   { "MaxCopies",	&MaxCopies,		VAR_INTEGER,	0 },
   { "MaxJobs",		&MaxJobs,		VAR_INTEGER,	0 },
   { "MaxJobsPerPrinter",&MaxJobsPerPrinter,	VAR_INTEGER,	0 },
@@ -333,6 +334,7 @@ ReadConfiguration(void)
   ListenBackLog     = SOMAXCONN;
   LogLevel          = L_ERROR;
   MaxClients        = 100;
+  MaxClientsPerHost = 0;
   MaxLogSize        = 1024 * 1024;
   MaxRequestSize    = 0;
   RootCertDuration  = 300;
@@ -532,6 +534,24 @@ ReadConfiguration(void)
 
   if (Classification[0])
     LogMessage(L_INFO, "Security set to \"%s\"", Classification);
+
+ /*
+  * Update the MaxClientsPerHost value, as needed...
+  */
+
+  if (MaxClientsPerHost <= 0)
+  {
+    MaxClientsPerHost = MaxClients / 10;
+
+    if (MaxClientsPerHost < 4)
+      MaxClientsPerHost = 4;
+  }
+
+  if (MaxClientsPerHost > MaxClients)
+    MaxClientsPerHost = MaxClients;
+
+  LogMessage(L_INFO, "Allowing up to %d client connections per host.",
+             MaxClientsPerHost);
 
  /*
   * Read the MIME type and conversion database...
@@ -2028,5 +2048,5 @@ get_addr_and_mask(const char *value,	/* I - String from config file */
 
 
 /*
- * End of "$Id: conf.c,v 1.77.2.15 2002/08/22 17:07:53 mike Exp $".
+ * End of "$Id: conf.c,v 1.77.2.16 2002/12/13 16:33:19 mike Exp $".
  */
