@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.18
 
+	- Added a MaxClientsPerHost configuration directive to
+	  provide limited protection against Denial of Service
+	  attacks.
 	- SECURITY FIX: Potential underflow/overflow bug in web
 	  interface.
 	- SECURITY FIX: Race condition in certificate creation.
